# chok-v2-py-sdk

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
datasets/sn/: LICENSE-AnoMod  README.md
demo/replayer/: README.md  __init__.py  __main__.py  cli.py  readers.py  runlog.py  scenarios.py  scheduler.py  shift.py  writer.py
demo/simulator/: README.md  __init__.py  __main__.py  catalog.py  cli.py  engine.py  filters.py  playback.py
docs/: README.md  api-contract.md  architecture.md  data-schema.md  snapshot-contract.md  trigger-policy.md
docs/decisions/: ADR-001-snapshot-window.md  ADR-002-baseline-source.md  ADR-003-realtime-signal-scope.md  ADR-004-replayer-data-layout.md  ADR-005-sdk-structure.md  ADR-006-trigger-detectors.md  ADR-007-snapshot-manager.md  README.md
docs/plans/: 01-replayer.md  02-collector-normalization-buffer.md  03-tail-rework-normalization.md  04-memory-buffer.md  05-runner-scenario-replay.md  06-replayer-e2e-integration.md
examples/: README.md
examples/basic_sdk/: main.py
scripts/: generate_sample_data.py  mock_ingest_server.py  run_demo_server.sh  run_local.py  run_local_demo.sh
src/rca_sdk/: cli.py  (+2 more)
test_report/: collector-test-report.md  replayer-e2e-report.md  replayer-integration-fixes-test-report.md  scenario-replay-report.md  tail-rework-normalization-test-report.md
tests/: conftest.py  test_buffer.py  test_collectors.py  test_mock_ingest_server.py  test_normalization_common.py  test_normalizers.py  test_runner.py  test_runner_wiring.py  test_smoke.py  test_transport_client.py
(+163 files in other folders)
