[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chok-v2-py-sdk"
version = "0.1.0"
description = "RCA edge collector SDK — tail, normalize, buffer, trigger, and bundle observability snapshots"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "KT-AX-ICT" }]
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "httpx>=0.27",
    "pandas>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff==0.15.21",   # 핀 고정: CI/로컬 lint 결과 드리프트 방지 (버전 올릴 땐 여기서)
    "mypy>=1.11",
]

[project.scripts]
rca-collect = "rca_sdk.cli:main"

# import 패키지는 rca_sdk (배포명 chok-v2-py-sdk와 다름 — 의도된 것)
[tool.hatch.build.targets.wheel]
packages = ["src/rca_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
packages = ["rca_sdk"]
ignore_missing_imports = true
